Characters and buttons added

--- a/bossFight.html
+++ b/bossFight.html
@@ -15,7 +15,18 @@
 </div>
 
 <div class="screen">
-	<h3>THIS IS A TEST TESTING</h3>
+	<h3>THIS IS THE BOSS.</h3>
+	
+	
+	<img src="bosses/vlad.png">
+	
+	
+	<h4>Such evil.</h4>
+	
+	<button type="button" id="backButton" class="backButton" onclick="location.href = 'screen1welcome.html';">Back</button>
+	<button type="button" id="continueButton" class="contButton" onclick="location.href = 'screen3you.html';">Continue</button>
+	
+	
 </div>
 
 </body>
