New banner, starting JS for battle sequence.

--- a/screen1welcome.html
+++ b/screen1welcome.html
@@ -11,15 +11,13 @@
 <body>
 
 <div class="banner">
-	<h1>BOSS FIGHT!</h1>
+	<input type="image" src="backgrounds/banner.png" onclick="location.href = 'screen1welcome.html';">
 </div>
 
 <div class="screen">
-	<h1>WELCOME TO BOSS FIGHT!</h1>
+	<h1>WELCOME TO</h1>
 	
 	<img src="champions/logo.jpg">
-	
-	<h4>Ghetto logo.</h4>
 	
 	<button type="button" id="continueButton" class="contButton" onclick="location.href = 'bossFight.html';">Continue</button>
 	
