--- a/screen3you.html
+++ b/screen3you.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="banner">
-	<h1>BOSS FIGHT!</h1>
+	<input type="image" src="backgrounds/banner.png" onclick="location.href = 'screen1welcome.html';">
 </div>
 
 <div class="screen">
@@ -22,7 +22,7 @@
 	<h4>Such heroic.</h4>
 	
 	<button type="button" id="backButton" class="backButton" onclick="location.href = 'bossFight.html';">Back</button>
-	<button type="button" id="continueButton" class="contButton">Continue</button>
+	<button type="button" id="continueButton" class="contButton" onclick="location.href = 'screen4instructions.html';">Continue</button>
 	
 	
 </div>
