--- a/screen5fight.html
+++ b/screen5fight.html
@@ -15,16 +15,11 @@
 </div>
 
 <div class="screen">
-	<h3>THIS IS THE BOSS.</h3>
 	
+		
 	
-	<img src="bosses/vlad.png">
+	<button type="button" id="backButton" class="backButton" onclick="location.href = 'screen4instructions.html';">Back</button>
 	
-	
-	<h4>Such evil.</h4>
-	
-	<button type="button" id="backButton" class="backButton" onclick="location.href = 'screen1welcome.html';">Back</button>
-	<button type="button" id="continueButton" class="contButton" onclick="location.href = 'screen3you.html';">Continue</button>
 	
 	
 </div>
