Alert function, connecting JS

--- a/screen4instructions.html
+++ b/screen4instructions.html
@@ -3,8 +3,6 @@
 <head>
 
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<script src="project.js"></script>
-	
 	<meta name=viewport content='width=700'>
 
 </head>
@@ -29,7 +27,7 @@
 		<h2>Are you ready...?</h2>
 	
 	<button type="button" id="backButton" class="backButton" onclick="location.href = 'screen3you.html';">Back</button>
-	<button type="button" id="continueButton" class="contButton" onclick="location.href = 'screen5fight.html';">Continue</button>
+	<button type="button" id="continueButton" class="contButton" onclick="location.href = 'screen5fight.html';">FIGHT!</button>
 	
 	
 </div>
